tests/ui/issues/issue-10656.stderr
error: missing documentation for the crate
  --> $DIR/issue-10656.rs:1:1
   |
LL | / #![deny(missing_docs)]
LL | | #![crate_type="lib"]
   | |____________________^
   |
note: the lint level is defined here
  --> $DIR/issue-10656.rs:1:9
   |
LL | #![deny(missing_docs)]
   |         ^^^^^^^^^^^^

error: aborting due to 1 previous error

